--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Find Your Activity Quiz</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="styles/style.css">
   <style>
     body { font-family: 'Segoe UI', Arial, sans-serif; background: #f8fafc; margin: 0; }
     .quiz-container { max-width: 400px; margin: 48px auto; background: #fff; border-radius: 18px; box-shadow: 0 2px 12px rgba(37,99,235,0.08); padding: 32px 28px; text-align: center; }
