--- a/quiz.html
+++ b/quiz.html
@@ -87,16 +87,16 @@
     // Initial state
     updateCampusCheckboxes();
     const activities = [
-  { name: 'Karaoke Lounge', category: 'music', building: '5', vibe: 'social', link: 'music/karaoke.html' },
-  { name: 'XBox Lounge', category: 'games', building: '4', vibe: 'active', link: 'games/xbox.html' },
-  { name: 'Treehouse', category: 'funmeetingspaces', building: '31', vibe: 'chill', link: 'funmeetingspaces/treehouse.html' },
-  { name: 'Snack Market', category: 'coffee', building: '4', vibe: 'chill', link: 'coffee/snack.html' },
-  { name: 'Breville Coffee Machine', category: 'coffee', building: '5', vibe: 'chill', link: 'coffee/breville.html' },
-  { name: 'Nap Room', category: 'wellness', building: '16', vibe: 'chill', link: 'wellness/naproom.html' },
-  { name: 'Basketball Court', category: 'movement', building: '92', vibe: 'active', link: 'movement/basketball.html' },
-  { name: 'Library', category: 'learn', building: '7', vibe: 'chill', link: 'learn/library.html' },
-  { name: 'Speakeasy / Secret Room', category: 'funmeetingspaces', building: '40', vibe: 'social', link: 'funmeetingspaces/speakeasy.html' },
-  { name: 'Acoustic Panel Wall', category: 'explore', building: '40', vibe: 'surprise', link: 'explore/acousticpanel.html' }
+  { name: 'Karaoke Lounge', category: 'music', building: '5', vibe: 'social', link: 'activities/music/karaoke.html' },
+  { name: 'XBox Lounge', category: 'games', building: '4', vibe: 'active', link: 'activities/games/xbox.html' },
+  { name: 'Treehouse', category: 'funmeetingspaces', building: '31', vibe: 'chill', link: 'activities/funmeetingspaces/treehouse.html' },
+  { name: 'Snack Market', category: 'coffee', building: '4', vibe: 'chill', link: 'activities/coffee/snack.html' },
+  { name: 'Breville Coffee Machine', category: 'coffee', building: '5', vibe: 'chill', link: 'activities/coffee/breville.html' },
+  { name: 'Nap Room', category: 'wellness', building: '16', vibe: 'chill', link: 'activities/wellness/naproom.html' },
+  { name: 'Basketball Court', category: 'movement', building: '92', vibe: 'active', link: 'activities/movement/basketball.html' },
+  { name: 'Library', category: 'learn', building: '7', vibe: 'chill', link: 'activities/learn/library.html' },
+  { name: 'Speakeasy / Secret Room', category: 'funmeetingspaces', building: '40', vibe: 'social', link: 'activities/funmeetingspaces/speakeasy.html' },
+  { name: 'Acoustic Panel Wall', category: 'explore', building: '40', vibe: 'surprise', link: 'activities/explore/acousticpanel.html' }
     ];
     // Multi-step quiz navigation
     let currentStep = 0;
