fix css + alignment issues

--- a/activities/movement/basketball.html
+++ b/activities/movement/basketball.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Basketball Court</title>
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="../../styles/activities-styles.css">
@@ -10,7 +12,7 @@
     <img src="../../images/basketballb92.jpg" alt="Basketball Court" class="activity-img" />
     <h1 class="activity-title">Basketball Court</h1>
     <p class="activity-desc">Shoot hoops and play basketball with friends. The court is open for casual games and team matches.</p>
-    <span class="activity-tag">Building 92, Floor 1</span>
+  <span class="activity-tag">Building 92, Floor 1</span>
     <a href="../../main.html" class="activity-link">← Back to Main</a>
   </div>
   </div>
